Tue Jan 20 10:18:28 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/field_associations.py: Add test for relevant_data
	  when allow_field_specific is False.

Mon Jan 19 17:45:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/Makefile,
	  external_posting_source/sortdatabase/sortdatabase.cc,
	  external_posting_source/sortdatabase/test_sortdatabase.py: Add
	  sortdatabase command, to sort a database by an external list of
	  orders.

Mon Jan 19 14:18:37 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update versions of xapian packages.

Mon Jan 19 14:17:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* coverage.py: Update coverage version.

Tue Jan 13 17:10:47 GMT 2009  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/searchconnection.py: Switched to using SORTABLE action for
	  query_valuemap, avoiding format problems of FACET.
	* xappy/tests/valuemapsource_1: Added test cases for simple queries
	  with and without default weights

Tue Jan 13 14:58:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Don't forget to build SWIG before
	  using it!

Tue Jan 13 14:39:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Replace accidentally removed line.

Tue Jan 13 14:35:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Use $HOME/src/xappy if $HOME/xappy
	  doesn't exist, to please Tom.  Include the branchpoint revision
	  numbers in patches to avoid confusion when those change.  Make
	  xappylibdir if it doesn't already exist.

Tue Jan 13 13:20:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update package build script to use the
	  last-changed revision number on each branch for the branch diffs
	  file, to avoid having to refetch all of them on any commit
	  anywhere in the xapian tree.
